pulsesrc: don't assert in get_time() when called after shutdown

Which might happen if the source gets set to NULL state before
the rest of the pipeline.

https://bugzilla.gnome.org/show_bug.cgi?id=686985